removed duplicate convenience methods from parser classes